--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -4,6 +4,7 @@ it:
   abbreviation: Abbreviation
   access_denied: "Access Denied"        
   account: Conto
+  account_updated: "Account updated!"        
   action: Azione
   actions: 
     cancel: Cancelare
@@ -163,6 +164,7 @@ it:
   allow_backorders: "Allow Backorders"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Allow SSL to be used when in development and test modes
   allow_ssl_to_be_used_when_in_production_mode: Allow SSL to be used in production mode         
+  alternative_phone: Alternative Phone
   amount: Totale
   are_you_sure: "Are you sure"
   are_you_sure_category: "Sei sicuro di voler cancellare questa categoria?"
@@ -192,6 +194,7 @@ it:
   change_language: "Cambia lingua"
   charged: Charged
   checkout: Acquista
+  checkout_had_errors: The checkout details contained one or more errors
   city: Città
   comp_order: "Cancellare l'ordine"
   comp_order_confirmation: "Customer will not be charged.  Are you sure you want to comp this order?"
@@ -242,11 +245,26 @@ it:
   expiration: "Expiration"
   expiration_month: "Valido fino (Mese)"
   expiration_year: "Valido fino (Anno)"
+  ext_shipping_calculator: Calculator
+  ext_shipping_cost: Cost
+  ext_shipping_editing_shipping_category: "Editing Shipping Category"
+  ext_shipping_editing_shipping_method: "Editing Shipping Method"
+  ext_shipping_mark_shipped: "Mark Shipped"
+  ext_shipping_method: Method
+  ext_shipping_new_shipping_category: "New Shipping Category"
+  ext_shipping_new_shipping_method: "New Shipping Method"
+  ext_shipping_shipment_number: "Shipment #"
+  ext_shipping_shipping_categories: "Shipping Categories"
+  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
+  ext_shipping_shipping_methods: "Shipping Methods"
+  ext_shipping_shipping_methods_description: "Manage shipping methods"
+  ext_shipping_tracking: Tracking
   extension: estensione
   extensions: estensioni
   filename: file
   final_confirmation: "Conferma finale"
   first_name: nome
+  forgot_password: "Forgot Password"
   gateway: Gateway
   gateway_error: "Gateway Error"
   gateway_setting_description: "Select a payment gateway and configure its settings."
@@ -284,8 +302,9 @@ it:
   locale_changed: "Locale Changed"
   log_in: Login
   logged_in_as: "Loggato con"
-  logged_in_successfully: "Logged in successfully."
-  login_authentication_failed: "Login authentication failed."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Utente
   logout: Logout
   mail_delivery_enabled:
@@ -318,6 +337,7 @@ it:
   next: continua
   no_items_in_cart: "Carrello vuoto"
   no_match_found: "No Match Found"
+  no_user_found: "No user was found with that email address"
   none: ""
   none_available: "None Available"
   on_hand: "In magazzino"
@@ -344,6 +364,10 @@ it:
   paid: Paid
   parent_category: "Sottocategoria di"
   password: Password
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Path
   pay: pay
   payment: Pagamento
@@ -365,6 +389,7 @@ it:
   products: Prodotti
   properties: ""
   property: ""
+  prototype: Prototype
   prototypes: ""
   qty: Qnt
   rate: Rate
@@ -372,6 +397,7 @@ it:
   remove: ""
   reports: Reports
   resend: Riinvia
+  reset_password: "Reset my password"
   response_code: "Response Code"
   resume: "resume"
   resumed: Resumed
@@ -387,6 +413,7 @@ it:
   secure_connection_type: Secure Connection Type
   select: Seleziona
   select_from_prototype: ""
+  select_preferred_shipping_option: "Select preferred shipping option"
   send_copy_of_all_mails_to: Send Copy of All Mails To
   send_copy_of_orders_mails_to: Send Copy of Order Mails To         
   send_mails_as: Send Mails As                    
@@ -398,6 +425,7 @@ it:
   shipping: Consegna
   shipping_address: "Indirizzo di consegna"
   shipping_error: "Shipping Error"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: "Metodo di consegna"
   shipping_total: "Totale costi di consegna"
   shopping_cart: Carrello
@@ -406,6 +434,8 @@ it:
   show_only_complete_orders: "Only show complete orders"
   show_out_of_stock_products: "Show out-of-stock products"
   sign_up: "Sign up"
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: SKU
   smtp: SMTP
   smtp_authentication_type: SMTP Authentication Type         
@@ -452,6 +482,7 @@ it:
   unable_to_capture_credit_card: "Unable to Capture Credit Card"
   unable_to_save_order: "Unable to Save Order"
   update: Salva
+  update_password: "Update my password and log me in"                    
   updated_successfully:
   use_as_shipping_address: Use as Shipping Address
   use_billing_address: Use Billing Address
@@ -478,18 +509,3 @@ it:
   zone_based: "Zone Based"
   zone_setting_description: ""
   zones: ""
-  ext_shipping_calculator: Calculator
-  ext_shipping_cost: Cost
-  ext_shipping_editing_shipping_category: "Editing Shipping Category"
-  ext_shipping_editing_shipping_method: "Editing Shipping Method"
-  ext_shipping_mark_shipped: "Mark Shipped"
-  ext_shipping_method: Method
-  ext_shipping_new_shipping_category: "New Shipping Category"
-  ext_shipping_new_shipping_method: "New Shipping Method"
-  ext_shipping_shipment_number: "Shipment #"
-  ext_shipping_shipping_categories: "Shipping Categories"
-  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
-  ext_shipping_shipping_methods: "Shipping Methods"
-  ext_shipping_shipping_methods_description: "Manage shipping methods"
-  ext_shipping_tracking: Tracking
-  select_preferred_shipping_option: "Select preferred shipping option"
