--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -4,6 +4,7 @@ de:
   abbreviation: Abkürzung
   access_denied: "Zugriff verweigert"        
   account: Konto
+  account_updated: "Account updated!"        
   action: Aktion
   actions: 
     cancel: Abbrechen
@@ -163,6 +164,7 @@ de:
   allow_backorders: "Lieferrückstand erlauben"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Allow SSL to be used when in development and test modes
   allow_ssl_to_be_used_when_in_production_mode: Allow SSL to be used in production mode         
+  alternative_phone: Alternative Phone
   amount: Summe
   are_you_sure: "Sind sie sicher"
   are_you_sure_category: "Sind sie sicher dass sie diese Kategorie löschen möchten?"
@@ -192,6 +194,7 @@ de:
   change_language: "Sprache ändern"
   charged: geändert
   checkout: "Zur Kasse"
+  checkout_had_errors: The checkout details contained one or more errors
   city: Stadt
   comp_order: "Bestellung abbrechen"
   comp_order_confirmation: ""
@@ -242,11 +245,26 @@ de:
   expiration: "Expiration"
   expiration_month: "Gültig bis (Monat)"
   expiration_year: "Gültig bis (Jahr)"
+  ext_shipping_calculator: Calculator
+  ext_shipping_cost: Cost
+  ext_shipping_editing_shipping_category: "Editing Shipping Category"
+  ext_shipping_editing_shipping_method: "Editing Shipping Method"
+  ext_shipping_mark_shipped: "Mark Shipped"
+  ext_shipping_method: Method
+  ext_shipping_new_shipping_category: "New Shipping Category"
+  ext_shipping_new_shipping_method: "New Shipping Method"
+  ext_shipping_shipment_number: "Shipment #"
+  ext_shipping_shipping_categories: "Shipping Categories"
+  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
+  ext_shipping_shipping_methods: "Shipping Methods"
+  ext_shipping_shipping_methods_description: "Manage shipping methods"
+  ext_shipping_tracking: Tracking
   extension: Erweiterung
   extensions: Erweiterungen
   filename: Dateiname
   final_confirmation: "End Bestätigung"
   first_name: Vorname
+  forgot_password: "Forgot Password"
   gateway: Gateway
   gateway_error: "Gateway Fehler"
   gateway_setting_description: "Gateway-Einstellungen ändern"
@@ -284,8 +302,9 @@ de:
   locale_changed: "Sprache geändert"
   log_in: Anmelden
   logged_in_as: "Angemldet unter"
-  logged_in_successfully: "Logged in successfully."
-  login_authentication_failed: "Login authentication failed."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Benutzer
   logout: Abmelden
   mail_delivery_enabled: "Mailversand aktiviert"
@@ -318,6 +337,7 @@ de:
   next: weiter
   no_items_in_cart: "Keine Artikel im  Warenkorb"
   no_match_found: "Kein Treffer"
+  no_user_found: "No user was found with that email address"
   none: kein
   none_available: "keine verfügbar"
   on_hand: "Auf Lager"
@@ -344,6 +364,10 @@ de:
   paid: Bezahlt
   parent_category: "Unterkategorie von"
   password: Passwort
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Pfad
   pay: zahlen
   payment: Zahlung
@@ -365,6 +389,7 @@ de:
   products: Produkte
   properties: "Eigenschaften"
   property: "Eigenschaft"
+  prototype: Prototype
   prototypes: "Prototyp"
   qty: Anz
   rate: Rate
@@ -372,6 +397,7 @@ de:
   remove: Entfernen
   reports: Berichte
   resend: "Neu versenden"
+  reset_password: "Reset my password"
   response_code: Rückgabewert
   resume: Fortsetzen
   resumed: Fortgesetzt
@@ -387,6 +413,7 @@ de:
   secure_connection_type: Secure Connection Type
   select: Auswählen
   select_from_prototype: ""
+  select_preferred_shipping_option: "Select preferred shipping option"
   send_copy_of_all_mails_to: Send Copy of All Mails To
   send_copy_of_orders_mails_to: Send Copy of Order Mails To         
   send_mails_as: Send Mails As                    
@@ -398,6 +425,7 @@ de:
   shipping: Lieferung
   shipping_address: Lieferadresse
   shipping_error: "Shipping Error"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: Liefermethode
   shipping_total: "Lieferkosten Gesamt"
   shopping_cart: Warenkorb
@@ -406,6 +434,8 @@ de:
   show_only_complete_orders: "Only show complete orders"
   show_out_of_stock_products: "Zeige ausverkaufte Produkte"
   sign_up: "Anmelden"
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: Lagerhaltungsnummer
   smtp: SMTP
   smtp_authentication_type: SMTP Authentication Type         
@@ -452,6 +482,7 @@ de:
   unable_to_capture_credit_card: "Unable to Capture Credit Card"
   unable_to_save_order: "Unable to Save Order"
   update: Speichern
+  update_password: "Update my password and log me in"                    
   updated_successfully: "Erfolgreich aktualisiert"
   use_as_shipping_address: Use as Shipping Address
   use_billing_address: Use Billing Address
@@ -478,18 +509,3 @@ de:
   zone_based: "Zone Based"
   zone_setting_description: ""
   zones: Zones
-  ext_shipping_calculator: Calculator
-  ext_shipping_cost: Cost
-  ext_shipping_editing_shipping_category: "Editing Shipping Category"
-  ext_shipping_editing_shipping_method: "Editing Shipping Method"
-  ext_shipping_mark_shipped: "Mark Shipped"
-  ext_shipping_method: Method
-  ext_shipping_new_shipping_category: "New Shipping Category"
-  ext_shipping_new_shipping_method: "New Shipping Method"
-  ext_shipping_shipment_number: "Shipment #"
-  ext_shipping_shipping_categories: "Shipping Categories"
-  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
-  ext_shipping_shipping_methods: "Shipping Methods"
-  ext_shipping_shipping_methods_description: "Manage shipping methods"
-  ext_shipping_tracking: Tracking
-  select_preferred_shipping_option: "Select preferred shipping option"
