--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -4,6 +4,7 @@ en-US:
   abbreviation: Abbreviation
   access_denied: "Access Denied"
   account: Account
+  account_updated: "Account updated!"        
   action: Action
   actions: 
     cancel: Cancel
@@ -146,7 +147,6 @@ en-US:
       zone: 
         one: Zone
         other: Zones
-  account_updated: "Account updated!"        
   add: Add
   add_category: "Add Category"
   add_country: "Add Country"
@@ -194,6 +194,7 @@ en-US:
   change_language: "Change Language"
   charged: Charged
   checkout: Checkout
+  checkout_had_errors: The checkout details contained one or more errors
   city: City
   comp_order: "Comp Order"
   comp_order_confirmation: "Customer will not be charged.  Are you sure you want to comp this order?"
@@ -244,6 +245,20 @@ en-US:
   expiration: "Expiration"
   expiration_month: "Expiration Month"
   expiration_year: "Expiration Year"
+  ext_shipping_calculator: Calculator
+  ext_shipping_cost: Cost
+  ext_shipping_editing_shipping_category: "Editing Shipping Category"
+  ext_shipping_editing_shipping_method: "Editing Shipping Method"
+  ext_shipping_mark_shipped: "Mark Shipped"
+  ext_shipping_method: Method
+  ext_shipping_new_shipping_category: "New Shipping Category"
+  ext_shipping_new_shipping_method: "New Shipping Method"
+  ext_shipping_shipment_number: "Shipment #"
+  ext_shipping_shipping_categories: "Shipping Categories"
+  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
+  ext_shipping_shipping_methods: "Shipping Methods"
+  ext_shipping_shipping_methods_description: "Manage shipping methods"
+  ext_shipping_tracking: Tracking
   extension: Extension
   extensions: Extensions
   filename: Filename
@@ -374,8 +389,8 @@ en-US:
   products: Products
   properties: Properties
   property: Property
-  prototypes: Prototypes
   prototype: Prototype
+  prototypes: Prototypes
   qty: Qty
   rate: Rate
   remember_me: "Remember me"
@@ -398,6 +413,7 @@ en-US:
   secure_connection_type: Secure Connection Type
   select: Select
   select_from_prototype: "Select From Prototype"
+  select_preferred_shipping_option: "Select preferred shipping option"
   send_copy_of_all_mails_to: Send Copy of All Mails To
   send_copy_of_orders_mails_to: Send Copy of Order Mails To         
   send_mails_as: Send Mails As                    
@@ -466,8 +482,8 @@ en-US:
   unable_to_capture_credit_card: "Unable to Capture Credit Card"
   unable_to_save_order: "Unable to Save Order"
   update: Update
-  updated_successfully: "Updated Successfully"
   update_password: "Update my password and log me in"                    
+  updated_successfully: "Updated Successfully"
   use_as_shipping_address: Use as Shipping Address
   use_billing_address: Use Billing Address
   use_different_shipping_address: "Use Different Shipping Address"
@@ -493,18 +509,3 @@ en-US:
   zone_based: "Zone Based"
   zone_setting_description: "Collections of countries, states or other zones to be used in various calculations."
   zones: Zones  
-  ext_shipping_calculator: Calculator
-  ext_shipping_cost: Cost
-  ext_shipping_editing_shipping_category: "Editing Shipping Category"
-  ext_shipping_editing_shipping_method: "Editing Shipping Method"
-  ext_shipping_mark_shipped: "Mark Shipped"
-  ext_shipping_method: Method
-  ext_shipping_new_shipping_category: "New Shipping Category"
-  ext_shipping_new_shipping_method: "New Shipping Method"
-  ext_shipping_shipment_number: "Shipment #"
-  ext_shipping_shipping_categories: "Shipping Categories"
-  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
-  ext_shipping_shipping_methods: "Shipping Methods"
-  ext_shipping_shipping_methods_description: "Manage shipping methods"
-  ext_shipping_tracking: Tracking
-  select_preferred_shipping_option: "Select preferred shipping option"
