--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -4,6 +4,7 @@ fr-FR:
   abbreviation: Abréviation
   access_denied: "Accès interdit"
   account: Compte
+  account_updated: "Account updated!"        
   action: Action
   actions: 
     cancel: Annuler
@@ -56,6 +57,7 @@ fr-FR:
         master_price: "Prix de départ"
         name: Nom
         on_hand: "On Hand"
+        shipping_category: "Shipping Category"
       property: 
         name: Nom
         presentation: Presentation
@@ -124,6 +126,9 @@ fr-FR:
       role: 
         one: Rôles
         other: Rôles
+      shipping_category: 
+        one: "Shipping Category"
+        other: "Shipping Categories"
       state: 
         one: Région
         other: Régions
@@ -159,6 +164,7 @@ fr-FR:
   allow_backorders: "Permettre la rupture de stock"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Permettre l'utilisation du SSL lors des modes développement et test
   allow_ssl_to_be_used_when_in_production_mode: Permettre l'utilisation du SSL lors du mode production
+  alternative_phone: Alternative Phone
   amount: Montant
   are_you_sure: "Êtes-vous sûr ?"
   are_you_sure_category: "Êtes-vous sûr de vouloir supprimer cette catégorie ?"
@@ -188,6 +194,7 @@ fr-FR:
   change_language: "Changer la langue"
   charged: Débité
   checkout: Procéder au paiement
+  checkout_had_errors: The checkout details contained one or more errors
   city: Ville
   comp_order: "Commande complète"
   comp_order_confirmation: "Le client n'a pas été débité.  Êtes-vous sûr de vouloir valider cette commande ?"
@@ -238,11 +245,26 @@ fr-FR:
   expiration: Expiration
   expiration_month: "Mois d'expiration"
   expiration_year: "Année d'expiration"
+  ext_shipping_calculator: Calculator
+  ext_shipping_cost: Cost
+  ext_shipping_editing_shipping_category: "Editing Shipping Category"
+  ext_shipping_editing_shipping_method: "Editing Shipping Method"
+  ext_shipping_mark_shipped: "Mark Shipped"
+  ext_shipping_method: Method
+  ext_shipping_new_shipping_category: "New Shipping Category"
+  ext_shipping_new_shipping_method: "New Shipping Method"
+  ext_shipping_shipment_number: "Shipment #"
+  ext_shipping_shipping_categories: "Shipping Categories"
+  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
+  ext_shipping_shipping_methods: "Shipping Methods"
+  ext_shipping_shipping_methods_description: "Manage shipping methods"
+  ext_shipping_tracking: Tracking
   extension: Prolongation
   extensions: Prolongations
   filename: Nom du fichier
   final_confirmation: "Confirmation finale"
   first_name: "Prenom"
+  forgot_password: "Forgot Password"
   gateway: Passerelle
   gateway_error: "Erreur de la passerelle"
   gateway_setting_description: "Sélectionner une passerelle de paiement et configurez ses paramètres."
@@ -280,8 +302,9 @@ fr-FR:
   locale_changed: "Locale changée"
   log_in: "S'identifier"
   logged_in_as: "Identifié en tant que"
-  logged_in_successfully: "Logged in successfully."
-  login_authentication_failed: "Login authentication failed."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Identifiant
   logout: Se déconnecter
   mail_delivery_enabled: "Distribution des emails activée"
@@ -314,6 +337,7 @@ fr-FR:
   next: Suivant
   no_items_in_cart: ""
   no_match_found: "Aucune correspondance trouvée"
+  no_user_found: "No user was found with that email address"
   none: Aucun
   none_available: "Aucun de disponible"
   on_hand: "Disponible"
@@ -340,6 +364,10 @@ fr-FR:
   paid: Payer
   parent_category: "Catégorie racine"
   password: Mot de passe
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Chemin
   pay: payé
   payment: Paiement
@@ -361,6 +389,7 @@ fr-FR:
   products: Produits
   properties: Propriétés
   property: Propriété
+  prototype: Prototype
   prototypes: Prototypes
   qty: Qté
   rate: Taux
@@ -368,6 +397,7 @@ fr-FR:
   remove: Supprimer
   reports: Statistiques
   resend: Renvoyer
+  reset_password: "Reset my password"
   response_code: "Code de réponse"
   resume: "reprendre"
   resumed: repris
@@ -383,6 +413,7 @@ fr-FR:
   secure_connection_type: Connection de type sécurisée
   select: Selectionner
   select_from_prototype: "Sélectionner d'après le prototype"
+  select_preferred_shipping_option: "Select preferred shipping option"
   send_copy_of_all_mails_to: Envoyer une copie de tous les emails à
   send_copy_of_orders_mails_to: Envoyer une copie des commandes email à
   send_mails_as: Envoyer des mails en tant que
@@ -394,6 +425,7 @@ fr-FR:
   shipping: Frais de livraison
   shipping_address: "Adresse de livraison"
   shipping_error: "Erreur de livraison"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: "Méthode de livraison"
   shipping_total: "Total de la livraison"
   shopping_cart: "Panier"
@@ -402,6 +434,8 @@ fr-FR:
   show_only_complete_orders: "Afficher seulement les commandes complète"
   show_out_of_stock_products: "Afficher les produits n'étant plus en stock"
   sign_up: "S'inscrire"
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: Code barre
   smtp: SMTP
   smtp_authentication_type: Type d'authentification SMTP
@@ -448,6 +482,7 @@ fr-FR:
   unable_to_capture_credit_card: "Impossible de récupérer votre carte de crédit"
   unable_to_save_order: "Unable to Save Order"
   update: Mise à jour
+  update_password: "Update my password and log me in"                    
   updated_successfully: "Mise à jour effectuée avec succès"
   use_as_shipping_address: Use as Shipping Address
   use_billing_address: Use Billing Address
