--- a/config/locales/nb-NO.yml
+++ b/config/locales/nb-NO.yml
@@ -4,6 +4,7 @@ nb-NO:
   abbreviation: Fortkortelse
   access_denied: "Ikke tilgang"
   account: "Konto"
+  account_updated: "Account updated!"        
   action: Aksjon
   actions: 
     cancel: Avbryt
@@ -163,6 +164,7 @@ nb-NO:
   allow_backorders: "Tillat restordre"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Tillat at SSL brukes i utviklings- og testmodus.
   allow_ssl_to_be_used_when_in_production_mode: Tillat at SSL brukes i produksjonsmodus.
+  alternative_phone: Alternative Phone
   amount: Beløp
   are_you_sure: "Er du sikker"
   are_you_sure_category: "Er du sikker på at du vil slette denne kategorien?"
@@ -192,6 +194,7 @@ nb-NO:
   change_language: "Endre språk"
   charged: "Belastet"
   checkout: "Til kassen"
+  checkout_had_errors: The checkout details contained one or more errors
   city: Sted
   comp_order: "Kanseller ordre"
   comp_order_confirmation: "Kunden vil ikke bli belastet. Er du sikker på at du vil kansellere ordren?"
@@ -242,11 +245,26 @@ nb-NO:
   expiration: "Utgår"
   expiration_month: "Utgår måned"
   expiration_year: "Utgår år"
+  ext_shipping_calculator: Kalkulator
+  ext_shipping_cost: Kostnad
+  ext_shipping_editing_shipping_category: Endre fraktkategori
+  ext_shipping_editing_shipping_method: "Endre leveransemåte"
+  ext_shipping_mark_shipped: "Merk som levert"
+  ext_shipping_method: Leveransemåte
+  ext_shipping_new_shipping_category: "Ny fraktkategori"
+  ext_shipping_new_shipping_method: "Ny leveransemåte"
+  ext_shipping_shipment_number: "Leveransenummer"
+  ext_shipping_shipping_categories: "Fraktkategorier"
+  ext_shipping_shipping_categories_description: "Konfigurer fraktkategorier for å styre hvilke produkter som kan bruke de ulike leveransemåtene."
+  ext_shipping_shipping_methods: "Leveransemåter"
+  ext_shipping_shipping_methods_description: "Konfigurer leveransemåter."
+  ext_shipping_tracking: Sporing
   extension: Utvidelse
   extensions: Utvidelser
   filename: Filnavn
   final_confirmation: "Endelig bekreftelse"
   first_name: "Fornavn"
+  forgot_password: "Forgot Password"
   gateway: "Tjeneste"
   gateway_error: "Feil oppstått i tjeneste"
   gateway_setting_description: "Velg en betalingstjeneste og konfigurer den."
@@ -284,8 +302,9 @@ nb-NO:
   locale_changed: "Endret språk"
   log_in: "Logg inn"
   logged_in_as: "Innlogget som"
-  logged_in_successfully: "Vellykket innlogging."
-  login_authentication_failed: "Feil brukernavn eller passord."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Brukernavn
   logout: "Logg ut"
   mail_delivery_enabled: "Sending av epost er skrudd på"
@@ -318,6 +337,7 @@ nb-NO:
   next: Neste
   no_items_in_cart: "Ingen artikler i handlekurven"
   no_match_found: "Ingen treff"
+  no_user_found: "No user was found with that email address"
   none: Ingen
   none_available: "Ingen tilgjengelig"
   on_hand: "Tilgjengelig"
@@ -344,6 +364,10 @@ nb-NO:
   paid: Betalt
   parent_category: "Overkategori"
   password: Passord
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Sti
   pay: betal
   payment: Betaling
@@ -365,6 +389,7 @@ nb-NO:
   products: Produkter
   properties: Egenskaper
   property: Egenskap
+  prototype: Prototype
   prototypes: Prototyper
   qty: Antall
   rate: "Nivå"
@@ -372,6 +397,7 @@ nb-NO:
   remove: Fjern
   reports: Rapporter
   resend: "Send på nytt"
+  reset_password: "Reset my password"
   response_code: "Responskode"  
   resume: "fortsett"
   resumed: Fortsatt
@@ -387,6 +413,7 @@ nb-NO:
   secure_connection_type: "Kryptert forbindelse"
   select: Velg
   select_from_prototype: "Velg fra prototype"
+  select_preferred_shipping_option: "Velg ønsket leveransemåte"
   send_copy_of_all_mails_to: "Send kopi av all epost til"
   send_copy_of_orders_mails_to: "Send kopi av alle ordre-eposter til"
   send_mails_as: "Send epost som"
@@ -398,6 +425,7 @@ nb-NO:
   shipping: Frakt
   shipping_address: "Leveringsadresse"
   shipping_error: "Feil i forbindelse med leveranse"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: "Leveransemåte"
   shipping_total: "Fraktkostnader"
   shopping_cart: "Handlekurv"
@@ -406,6 +434,8 @@ nb-NO:
   show_only_complete_orders: "Vis bare ferdige ordrer"
   show_out_of_stock_products: "Vis produkter som ikke er på lager"
   sign_up: "Meld meg på"
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: Varenummer
   smtp: SMTP
   smtp_authentication_type: "SMTP autentisering"
@@ -452,6 +482,7 @@ nb-NO:
   unable_to_capture_credit_card: "Kunne ikke lagre kortopplysningene"
   unable_to_save_order: "Kunne ikke lagre ordren"
   update: Oppdater
+  update_password: "Update my password and log me in"                    
   updated_successfully: "Oppdatert"  
   use_as_shipping_address: "Bruk som leveringsadresse"
   use_billing_address: "Bruk fakturaadressen"
@@ -478,18 +509,3 @@ nb-NO:
   zone_based: "Soner"
   zone_setting_description: "Liste over land, stater og andre soner som brukes i diverse beregninger."
   zones: Soner  
-  ext_shipping_calculator: Kalkulator
-  ext_shipping_cost: Kostnad
-  ext_shipping_editing_shipping_category: Endre fraktkategori
-  ext_shipping_editing_shipping_method: "Endre leveransemåte"
-  ext_shipping_mark_shipped: "Merk som levert"
-  ext_shipping_method: Leveransemåte
-  ext_shipping_new_shipping_category: "Ny fraktkategori"
-  ext_shipping_new_shipping_method: "Ny leveransemåte"
-  ext_shipping_shipment_number: "Leveransenummer"
-  ext_shipping_shipping_categories: "Fraktkategorier"
-  ext_shipping_shipping_categories_description: "Konfigurer fraktkategorier for å styre hvilke produkter som kan bruke de ulike leveransemåtene."
-  ext_shipping_shipping_methods: "Leveransemåter"
-  ext_shipping_shipping_methods_description: "Konfigurer leveransemåter."
-  ext_shipping_tracking: Sporing
-  select_preferred_shipping_option: "Velg ønsket leveransemåte"
