--- a/config/locales/nl-BE.yml
+++ b/config/locales/nl-BE.yml
@@ -4,6 +4,7 @@ nl-BE:
   abbreviation: Afkorting
   access_denied: "Toegang geweigerd"
   account: Account
+  account_updated: "Account updated!"        
   action: Actie
   actions: 
     cancel: Annuleer
@@ -56,6 +57,7 @@ nl-BE:
         master_price: "Prijs"
         name: Naam
         on_hand: "Op Voorraad"
+        shipping_category: "Shipping Category"
       property: 
         name: Naam
         presentation: Presentatie
@@ -124,6 +126,9 @@ nl-BE:
       role: 
         one: Rol
         other: Rollen
+      shipping_category: 
+        one: "Shipping Category"
+        other: "Shipping Categories"
       state: 
         one: Status
         other: Statussen
@@ -159,6 +164,7 @@ nl-BE:
   allow_backorders: "Nabestellingen toelaten"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: "SSL gebruik toestaan in ontwikkel- en testomgevingen"
   allow_ssl_to_be_used_when_in_production_mode: "SSL gebruik toestaan in productie-omgeving"         
+  alternative_phone: Alternative Phone
   amount: Bedrag
   are_you_sure: "Ben je zeker"
   are_you_sure_category: "Wil je zeker deze categorie verwijderen?"
@@ -188,6 +194,7 @@ nl-BE:
   change_language: "Taalkeuze"
   charged: Aangere
   checkout: Bestelling
+  checkout_had_errors: The checkout details contained one or more errors
   city: Stad
   comp_order: "Afgebroken order"
   comp_order_confirmation: "De klant wordt niets aangerekend. Ben je zeker dat je het order wil onderbreken?"
@@ -238,11 +245,26 @@ nl-BE:
   expiration: Verval
   expiration_month: "Vervalmaand"
   expiration_year: "Vervaljaar"
+  ext_shipping_calculator: Calculator
+  ext_shipping_cost: Cost
+  ext_shipping_editing_shipping_category: "Editing Shipping Category"
+  ext_shipping_editing_shipping_method: "Editing Shipping Method"
+  ext_shipping_mark_shipped: "Mark Shipped"
+  ext_shipping_method: Method
+  ext_shipping_new_shipping_category: "New Shipping Category"
+  ext_shipping_new_shipping_method: "New Shipping Method"
+  ext_shipping_shipment_number: "Shipment #"
+  ext_shipping_shipping_categories: "Shipping Categories"
+  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
+  ext_shipping_shipping_methods: "Shipping Methods"
+  ext_shipping_shipping_methods_description: "Manage shipping methods"
+  ext_shipping_tracking: Tracking
   extension: Extensie
   extensions: Extensies
   filename: Bestandsnaam
   final_confirmation: "Definitieve bevestiging"
   first_name: "Voornaam"
+  forgot_password: "Forgot Password"
   gateway: Gateway
   gateway_error: "Gateway Fout"
   gateway_setting_description: "Selecteer een betalings-gateway en stel deze in."
@@ -280,8 +302,9 @@ nl-BE:
   locale_changed: "Regionale Instellingen Gewijzigd"
   log_in: "Aanmelden"
   logged_in_as: "Aangemeld als"
-  logged_in_successfully: "Logged in successfully."
-  login_authentication_failed: "Login authentication failed."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Login
   logout: Afmelden
   mail_delivery_enabled: "Mail aflevering aangezet"
@@ -314,6 +337,7 @@ nl-BE:
   next: Volgende
   no_items_in_cart: "Geen producten in Winkelmandje"
   no_match_found: "Geen gelijke gevonden"
+  no_user_found: "No user was found with that email address"
   none: Geen
   none_available: "Niet op voorraad"
   on_hand: "Op voorraad"
@@ -340,6 +364,10 @@ nl-BE:
   paid: Betaald
   parent_category: "Bovenliggende categorie"
   password: Wachtwoord
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Pad    
   pay: Betalen
   payment: Betaling
@@ -361,6 +389,7 @@ nl-BE:
   products: Producten
   properties: Eigenschappen
   property: Eigenschap
+  prototype: Prototype
   prototypes: Prototypes
   qty: Aantal
   rate: Tarief
@@ -368,6 +397,7 @@ nl-BE:
   remove: Verwijderen
   reports: Rapporten
   resend: "Opnieuw verzenden"
+  reset_password: "Reset my password"
   response_code: "Antwoord Code"  
   resume: "Hervatten"
   resumed: Hervat
@@ -383,6 +413,7 @@ nl-BE:
   secure_connection_type: "Secure Connection Type"
   select: Selecteer
   select_from_prototype: "Selecteer vanuit Prototype"
+  select_preferred_shipping_option: "Select preferred shipping option"
   send_copy_of_all_mails_to: "Zend kopie van alle mails naar"
   send_copy_of_orders_mails_to: "Zend kopie van bestelmails naar"      
   send_mails_as: "Zend mail als"                    
@@ -394,6 +425,7 @@ nl-BE:
   shipping: Aflevering
   shipping_address: "Afleveringsadres"
   shipping_error: "Fout met aflevering"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: "Verzendingsmethode"
   shipping_total: "Verzending"
   shopping_cart: "Winkelmandje"
@@ -402,6 +434,8 @@ nl-BE:
   show_only_complete_orders: "Toon enkel afgewerkte bestellingen"
   show_out_of_stock_products: "Toon producten die niet voorradig zijn"
   sign_up: "Registreer"
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: Sku
   smtp: SMTP
   smtp_authentication_type: "SMTP Autorisatie Type"
@@ -448,6 +482,7 @@ nl-BE:
   unable_to_capture_credit_card: "Aanrekening via Kredietkaart mislukt"
   unable_to_save_order: "Bestelling opslaan is mislukt"
   update: Updaten
+  update_password: "Update my password and log me in"                    
   updated_successfully: "Succesvol Aangepast"
   use_as_shipping_address: "Gebruik als afleveringsadres"
   use_billing_address: "Gebruik als factuuradres"
