--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -4,6 +4,7 @@ pt-BR:
   abbreviation: Abreviação
   access_denied: "Acesso Negado"
   account: Conta
+  account_updated: "Account updated!"        
   action: Ação
   actions: 
     cancel: Cancelar
@@ -56,6 +57,7 @@ pt-BR:
         master_price: "Preço Mestre"
         name: Nome
         on_hand: "Em mãos"
+        shipping_category: "Shipping Category"
       property: 
         name: Nome
         presentation: Apresentação
@@ -124,6 +126,9 @@ pt-BR:
       role: 
         one: Papél
         other: Papéis
+      shipping_category: 
+        one: "Shipping Category"
+        other: "Shipping Categories"
       state: 
         one: Estado
         other: Estados
@@ -159,6 +164,7 @@ pt-BR:
   allow_backorders: "Permitir Devoluções"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Permitir uso de SSL quando no modo de desenvolvimento e teste
   allow_ssl_to_be_used_when_in_production_mode: Permitir uso de SSL quando em modo de produção
+  alternative_phone: Alternative Phone
   amount: Valor
   are_you_sure: "Tem certeza?"
   are_you_sure_category: "Tem certeza que quer apagar esta categoria?"
@@ -188,6 +194,7 @@ pt-BR:
   change_language: "Mudar Língua"
   charged: Cobrado
   checkout: Finalizar
+  checkout_had_errors: The checkout details contained one or more errors
   city: Cidade
   comp_order: "Computar Pedido"
   comp_order_confirmation: "O cliente não será cobrado. Tem certeza que quer computar este pedido?"
@@ -238,11 +245,26 @@ pt-BR:
   expiration: "Expiração"
   expiration_month: "Mês de Expiração"
   expiration_year: "Ano de Expiração"
+  ext_shipping_calculator: Calculator
+  ext_shipping_cost: Cost
+  ext_shipping_editing_shipping_category: "Editing Shipping Category"
+  ext_shipping_editing_shipping_method: "Editing Shipping Method"
+  ext_shipping_mark_shipped: "Mark Shipped"
+  ext_shipping_method: Method
+  ext_shipping_new_shipping_category: "New Shipping Category"
+  ext_shipping_new_shipping_method: "New Shipping Method"
+  ext_shipping_shipment_number: "Shipment #"
+  ext_shipping_shipping_categories: "Shipping Categories"
+  ext_shipping_shipping_categories_description: "Manage shipping categories to identify which products can be shipped via which method"
+  ext_shipping_shipping_methods: "Shipping Methods"
+  ext_shipping_shipping_methods_description: "Manage shipping methods"
+  ext_shipping_tracking: Tracking
   extension: Extensão
   extensions: Extensões
   filename: "Nome do arquivo"
   final_confirmation: "Confirmação Final"
   first_name: "Primeiro Nome"
+  forgot_password: "Forgot Password"
   gateway: Gateway
   gateway_error: "Erro de Gateway"
   gateway_setting_description: "Selecionar um gateway de pagamento e ajustar suas configurações."
@@ -280,8 +302,9 @@ pt-BR:
   locale_changed: "Localização Modificada"
   log_in: Entre
   logged_in_as: "Logado como"
-  logged_in_successfully: "Logado com sucesso."
-  login_authentication_failed: "Autenticação do login falhou."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Login
   logout: Sair
   mail_delivery_enabled: "Envio de Email está habilitado"
@@ -314,6 +337,7 @@ pt-BR:
   next: Próximo
   no_items_in_cart: "Nr. de itens no carrinho"
   no_match_found: "Nada encontrado"
+  no_user_found: "No user was found with that email address"
   none: Nenhum
   none_available: "Nenhum Disponível"
   on_hand: "Na Mão"
@@ -340,6 +364,10 @@ pt-BR:
   paid: Pago
   parent_category: "Categoria Pai"
   password: Senha
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Caminho
   pay: pagar
   payment: Pagamento
@@ -361,6 +389,7 @@ pt-BR:
   products: Produtos
   properties: Propriedades
   property: Propriedade
+  prototype: Prototype
   prototypes: Protótipos
   qty: Qtde.
   rate: Taxa
@@ -368,6 +397,7 @@ pt-BR:
   remove: Remover
   reports: Relatórios
   resend: Reenviar
+  reset_password: "Reset my password"
   response_code: "Código de Resposta"
   resume: "continuar"
   resumed: Continuado
@@ -383,6 +413,7 @@ pt-BR:
   secure_connection_type: Tipo de Conexão Segura
   select: Selecionar
   select_from_prototype: "Selecionar a partir de Protótipo"
+  select_preferred_shipping_option: "Select preferred shipping option"
   send_copy_of_all_mails_to: Enviar Cópia de Todos os Emails Para
   send_copy_of_orders_mails_to: Enviar Cópia de Emails de Pedidos Para
   send_mails_as: Enviar Emails como
@@ -394,6 +425,7 @@ pt-BR:
   shipping: Entregando
   shipping_address: "Endereço de Entrega"
   shipping_error: "Erro de Entrega"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: "Método de Entrega"
   shipping_total: "Total de Entrega"
   shopping_cart: "Carrinho de Compra"
@@ -402,6 +434,8 @@ pt-BR:
   show_only_complete_orders: "Apenas mostre pedidos completos"
   show_out_of_stock_products: "Mostre produtos sem estoque"
   sign_up: Cadastrar
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: SKU
   smtp: SMTP
   smtp_authentication_type: Tipo de Autenticação SMTP
@@ -448,6 +482,7 @@ pt-BR:
   unable_to_capture_credit_card: "Não foi possível Capturar o Cartão de Crédito"
   unable_to_save_order: "Não foi Possível gravar Pedido"
   update: Atualizar
+  update_password: "Update my password and log me in"                    
   updated_successfully: "Atualizado com Sucesso"
   use_as_shipping_address: Use como Endereço de Entrega
   use_billing_address: Use como Endereço de Cobrança
