--- a/config/locales/ru-RU.yml
+++ b/config/locales/ru-RU.yml
@@ -4,6 +4,7 @@ ru-RU:
   abbreviation: Аббревиатура
   access_denied: "Доступ запрещен"
   account: Учетная запись
+  account_updated: "Account updated!"        
   action: Действие
   actions:
     cancel: Отменить
@@ -163,6 +164,7 @@ ru-RU:
   allow_backorders: "Allow Backorders ??"
   allow_ssl_to_be_used_when_in_developement_and_test_modes: Использовать SSL в development и test режимах
   allow_ssl_to_be_used_when_in_production_mode: Использовать SSL в production
+  alternative_phone: Alternative Phone
   amount: Сумма
   are_you_sure: "Вы уверены"
   are_you_sure_category: "Вы уверены, что хотите удалить эту категорию?"
@@ -192,6 +194,7 @@ ru-RU:
   change_language: "Сменить язык"
   charged: Оплачено
   checkout: оформить заказ
+  checkout_had_errors: The checkout details contained one or more errors
   city: Город
   comp_order: "Comp Order ??"
   comp_order_confirmation: "Customer will not be charged.  Are you sure you want to comp this order? ??"
@@ -242,11 +245,26 @@ ru-RU:
   expiration: Expiration
   expiration_month: "Месяц экспирации ??"
   expiration_year: "Год экспирации ??"
+  ext_shipping_calculator: Калькулятор
+  ext_shipping_cost: Стоимость
+  ext_shipping_editing_shipping_category: "Редактировать категорию доставки"
+  ext_shipping_editing_shipping_method: "Редактировать способ доставки"
+  ext_shipping_mark_shipped: "Отметить как доставленный"
+  ext_shipping_method: Способ
+  ext_shipping_new_shipping_category: "Новая категория доставки"
+  ext_shipping_new_shipping_method: "Новый способ доставки"
+  ext_shipping_shipment_number: "Доставка #"
+  ext_shipping_shipping_categories: "Категории доставки"
+  ext_shipping_shipping_categories_description: "Настройка категорий доставки - укажите, какие продукты могут быть доставлены какими способами"
+  ext_shipping_shipping_methods: "Способы доставки"
+  ext_shipping_shipping_methods_description: "Управление методами доставки"
+  ext_shipping_tracking: Отслеживание
   extension: Расширение
   extensions: Расширения
   filename: Имя Файла
   final_confirmation: "Финальное подтверждение"
   first_name: "Имя"
+  forgot_password: "Forgot Password"
   gateway: Платежный шлюз ??
   gateway_error: "Ошибка платежного шлюза ??"
   gateway_setting_description: "Выберите платежный шлюз и настройте его."
@@ -284,8 +302,9 @@ ru-RU:
   locale_changed: "Локаль изменена"
   log_in: "Зайти"
   logged_in_as: "Пользователь"
-  logged_in_successfully: "Logged in successfully."
-  login_authentication_failed: "Login authentication failed."
+  logged_in_succesfully: "Logged in successfully"
+  logged_out: "You have been logged out." 
+  login_failed: "Login authentication failed."      
   login_name: Логин
   logout: Выйти
   mail_delivery_enabled: "Доставка почты включена"
@@ -318,6 +337,7 @@ ru-RU:
   next: След.
   no_items_in_cart: ""
   no_match_found: "Совпадений не найдено"
+  no_user_found: "No user was found with that email address"
   none: Ни одного
   none_available: "Нет в наличии"
   on_hand: "On Hand"
@@ -344,6 +364,10 @@ ru-RU:
   paid: Оплачен
   parent_category: "Родительская категория"
   password: Пароль
+  password_reset_instructions: "Password Reset Instructions"
+  password_reset_instructions_are_mailed: "Instructions to reset your password have been emailed to you. Please check your email."
+  password_reset_token_not_found: "We're sorry, but we could not locate your account. If you are having issues try copying and pasting the URL from your email into your browser or restarting the reset password process."    
+  password_updated: "Password successfully updated"  
   path: Путь
   pay: оплатить
   payment: Платеж
@@ -365,6 +389,7 @@ ru-RU:
   products: Продукты
   properties: Свойства
   property: Свойство
+  prototype: Prototype
   prototypes: Прототипы
   qty: Кол-во
   rate: rate ??
@@ -372,6 +397,7 @@ ru-RU:
   remove: Убрать
   reports: отчеты
   resend: Отослать повторно
+  reset_password: "Reset my password"
   response_code: "Response Code"
   resume: "возобновить"
   resumed: Возобновлен
@@ -387,6 +413,7 @@ ru-RU:
   secure_connection_type: Тип защищенного соединения
   select: Выбрать
   select_from_prototype: "Выбрать из прототипов"
+  select_preferred_shipping_option: "Выберите предпочитаемый способ доставки"
   send_copy_of_all_mails_to: Отсылать копии всех писем на
   send_copy_of_orders_mails_to: Отсылать копии всех писем с заказами на
   send_mails_as: Отсылать почту как
@@ -398,6 +425,7 @@ ru-RU:
   shipping: Доставка
   shipping_address: "Адрес доставки"
   shipping_error: "Ошибка при доставке"
+  shipping_instructions: "Shipping Instructions"
   shipping_method: "Тип доставки"
   shipping_total: "Итого за доставку"
   shopping_cart: "Корзина"
@@ -406,6 +434,8 @@ ru-RU:
   show_only_complete_orders: "Only show complete orders"
   show_out_of_stock_products: "Показать продукты, которых нет в наличии"
   sign_up: "Регистрация"
+  site_name: "Site Name"
+  site_url: "Site URL"
   sku: SKU
   smtp: SMTP
   smtp_authentication_type: "Тип SMTP Аутентификации"
@@ -452,6 +482,7 @@ ru-RU:
   unable_to_capture_credit_card: "Unable to Capture Credit Card"
   unable_to_save_order: "Unable to Save Order"
   update: Изменить
+  update_password: "Update my password and log me in"                    
   updated_successfully: "Успешна изменена"
   use_as_shipping_address: Use as Shipping Address
   use_billing_address: Use Billing Address
@@ -478,18 +509,3 @@ ru-RU:
   zone_based: "состоит из других зон"
   zone_setting_description: "Collections of countries, states or other zones to be used in various calculations."
   zones: Зоны
-  ext_shipping_calculator: Калькулятор
-  ext_shipping_cost: Стоимость
-  ext_shipping_editing_shipping_category: "Редактировать категорию доставки"
-  ext_shipping_editing_shipping_method: "Редактировать способ доставки"
-  ext_shipping_mark_shipped: "Отметить как доставленный"
-  ext_shipping_method: Способ
-  ext_shipping_new_shipping_category: "Новая категория доставки"
-  ext_shipping_new_shipping_method: "Новый способ доставки"
-  ext_shipping_shipment_number: "Доставка #"
-  ext_shipping_shipping_categories: "Категории доставки"
-  ext_shipping_shipping_categories_description: "Настройка категорий доставки - укажите, какие продукты могут быть доставлены какими способами"
-  ext_shipping_shipping_methods: "Способы доставки"
-  ext_shipping_shipping_methods_description: "Управление методами доставки"
-  ext_shipping_tracking: Отслеживание
-  select_preferred_shipping_option: "Выберите предпочитаемый способ доставки"
