--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -214,6 +214,7 @@ da:
   charged: Charged
   checkout: Checkout
   city: Town / City
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Comp Order"
