--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -214,6 +214,7 @@ de:
   charged: geändert
   checkout: "Zur Kasse"
   city: Stadt
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Bestellung abbrechen"
