--- a/config/locales/il.yml
+++ b/config/locales/il.yml
@@ -214,6 +214,7 @@ il:
   charged: Charged
   checkout: תשלום
   city: עיר
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Comp Order"
