--- a/config/locales/mx.yml
+++ b/config/locales/mx.yml
@@ -214,6 +214,7 @@ mx:
   charged: Cargado
   checkout: Pagar
   city: Ciudad
+  clone: Clone
   code: "Código"
   combine: Combinar
   comp_order: "Pedido completado"
