--- a/config/locales/nb-NO.yml
+++ b/config/locales/nb-NO.yml
@@ -214,6 +214,7 @@ nb-NO:
   charged: "Belastet"
   checkout: "Til kassen"
   city: Sted
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Kanseller ordre"
