--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -214,6 +214,7 @@ pl:
   charged: Charged
   checkout: "Do kasy"
   city: Miejscowość
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Comp Order"
