--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -214,6 +214,7 @@ pt-BR:
   charged: Cobrado
   checkout: Finalizar
   city: Cidade
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Computar Pedido"
