--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -214,6 +214,7 @@ pt-PT:
   charged: Debitado
   checkout: Finalizar
   city: Cidade
+  clone: Clone
   code: Code
   combine: Combine
   comp_order: "Calcular Encomenda"
