--- a/config/locales/ru-RU.yml
+++ b/config/locales/ru-RU.yml
@@ -214,6 +214,7 @@ ru-RU:
   charged: "Оплачено"
   checkout: "Оформление заказа"
   city: "Город"
+  clone: Clone
   code: "Кодовое слово"
   combine: "Разрешить комбинировать"
   comp_order: "Comp Order ??"
